--- a/src/main/resources/trashsoftware/trashSnooker/fxml/widgets/abilityShower.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/widgets/abilityShower.fxml
@@ -22,66 +22,69 @@
         </font>
     </Label>
 
-    <Label fx:id="categoryLabel" text="%catProf" GridPane.rowIndex="1"/>
+    <Label fx:id="categoryLabel" text="%catProf" GridPane.rowIndex="2"/>
+    
+    <Label fx:id="sexLabel" GridPane.rowIndex="3"/>
+    <Label fx:id="heightLabel" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
 
-    <Label text="%aiming" GridPane.rowIndex="2"/>
+    <Label text="%aiming" GridPane.rowIndex="4"/>
     <ProgressBar fx:id="aimingBar" prefWidth="240.0"
-                 GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-    <Label fx:id="aimingLabel" text="99" GridPane.rowIndex="2" GridPane.columnIndex="2"/>
-    <Button fx:id="aimingBtn" onAction="#addPerk" text="+" GridPane.rowIndex="2" GridPane.columnIndex="3"/>
+                 GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+    <Label fx:id="aimingLabel" text="99" GridPane.rowIndex="4" GridPane.columnIndex="2"/>
+    <Button fx:id="aimingBtn" onAction="#addPerk" text="+" GridPane.rowIndex="4" GridPane.columnIndex="3"/>
 
-    <Label text="%cuePrecision" GridPane.rowIndex="3">
+    <Label text="%cuePrecision" GridPane.rowIndex="5">
         <tooltip>
             <Tooltip text="%cuePrecisionTooltip"/>
         </tooltip>
     </Label>
     <ProgressBar fx:id="cuePrecisionBar" prefWidth="240.0"
-                 GridPane.rowIndex="3" GridPane.columnIndex="1"/>
-    <Label fx:id="cuePrecisionLabel" text="99" GridPane.rowIndex="3" GridPane.columnIndex="2"/>
-    <Button fx:id="cuePrecisionBtn" onAction="#addPerk" text="+" GridPane.rowIndex="3" GridPane.columnIndex="3"/>
+                 GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+    <Label fx:id="cuePrecisionLabel" text="99" GridPane.rowIndex="5" GridPane.columnIndex="2"/>
+    <Button fx:id="cuePrecisionBtn" onAction="#addPerk" text="+" GridPane.rowIndex="5" GridPane.columnIndex="3"/>
 
-    <Label text="%powerAndMaxPower" GridPane.rowIndex="4">
+    <Label text="%powerAndMaxPower" GridPane.rowIndex="6">
         <tooltip>
             <Tooltip text="%powerTooltip"/>
         </tooltip>
     </Label>
     <ProgressBar fx:id="powerBar" prefWidth="240.0"
-                 GridPane.rowIndex="4" GridPane.columnIndex="1"/>
-    <Label fx:id="powerLabel" text="99/99" GridPane.rowIndex="4" GridPane.columnIndex="2"/>
-    <Button fx:id="powerBtn" onAction="#addPerk" text="+" GridPane.rowIndex="4" GridPane.columnIndex="3"/>
+                 GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+    <Label fx:id="powerLabel" text="99/99" GridPane.rowIndex="6" GridPane.columnIndex="2"/>
+    <Button fx:id="powerBtn" onAction="#addPerk" text="+" GridPane.rowIndex="6" GridPane.columnIndex="3"/>
 
-    <Label text="%powerControl" GridPane.rowIndex="5">
+    <Label text="%powerControl" GridPane.rowIndex="7">
         <tooltip>
             <Tooltip text="%powerControlTooltip"/>
         </tooltip>
     </Label>
     <ProgressBar fx:id="powerControlBar" prefWidth="240.0"
-                 GridPane.rowIndex="5" GridPane.columnIndex="1"/>
-    <Label fx:id="powerControlLabel" text="99" GridPane.rowIndex="5" GridPane.columnIndex="2"/>
-    <Button fx:id="powerControlBtn" onAction="#addPerk" text="+" GridPane.rowIndex="5" GridPane.columnIndex="3"/>
-
-    <Label text="%spinText" GridPane.rowIndex="6"/>
-    <ProgressBar fx:id="spinBar" prefWidth="240.0"
-                 GridPane.rowIndex="6" GridPane.columnIndex="1"/>
-    <Label fx:id="spinLabel" text="99" GridPane.rowIndex="6" GridPane.columnIndex="2"/>
-    <Button fx:id="spinBtn" onAction="#addPerk" text="+" GridPane.rowIndex="6" GridPane.columnIndex="3"/>
-
-    <Label text="%spinControlText" GridPane.rowIndex="7"/>
-    <ProgressBar fx:id="spinControlBar" prefWidth="240.0"
                  GridPane.rowIndex="7" GridPane.columnIndex="1"/>
-    <Label fx:id="spinControlLabel" text="99" GridPane.rowIndex="7" GridPane.columnIndex="2"/>
-    <Button fx:id="spinControlBtn" onAction="#addPerk" text="+" GridPane.rowIndex="7" GridPane.columnIndex="3"/>
+    <Label fx:id="powerControlLabel" text="99" GridPane.rowIndex="7" GridPane.columnIndex="2"/>
+    <Button fx:id="powerControlBtn" onAction="#addPerk" text="+" GridPane.rowIndex="7" GridPane.columnIndex="3"/>
 
-    <Label text="%offHand" GridPane.rowIndex="8"/>
-    <ProgressBar fx:id="notGoodHandBar" prefWidth="240.0"
+    <Label text="%spinText" GridPane.rowIndex="8"/>
+    <ProgressBar fx:id="spinBar" prefWidth="240.0"
                  GridPane.rowIndex="8" GridPane.columnIndex="1"/>
-    <Label fx:id="notGoodHandLabel" text="99" GridPane.rowIndex="8" GridPane.columnIndex="2"/>
-    <Button fx:id="notGoodHandBtn" onAction="#addPerk" text="+" GridPane.rowIndex="8" GridPane.columnIndex="3"/>
+    <Label fx:id="spinLabel" text="99" GridPane.rowIndex="8" GridPane.columnIndex="2"/>
+    <Button fx:id="spinBtn" onAction="#addPerk" text="+" GridPane.rowIndex="8" GridPane.columnIndex="3"/>
 
-    <Label text="%restHand" GridPane.rowIndex="9"/>
-    <ProgressBar fx:id="restBar" prefWidth="240.0"
+    <Label text="%spinControlText" GridPane.rowIndex="9"/>
+    <ProgressBar fx:id="spinControlBar" prefWidth="240.0"
                  GridPane.rowIndex="9" GridPane.columnIndex="1"/>
-    <Label fx:id="restLabel" text="99" GridPane.rowIndex="9" GridPane.columnIndex="2"/>
-    <Button fx:id="restBtn" onAction="#addPerk" text="+" GridPane.rowIndex="9" GridPane.columnIndex="3"/>
+    <Label fx:id="spinControlLabel" text="99" GridPane.rowIndex="9" GridPane.columnIndex="2"/>
+    <Button fx:id="spinControlBtn" onAction="#addPerk" text="+" GridPane.rowIndex="9" GridPane.columnIndex="3"/>
+
+    <Label text="%offHand" GridPane.rowIndex="10"/>
+    <ProgressBar fx:id="notGoodHandBar" prefWidth="240.0"
+                 GridPane.rowIndex="10" GridPane.columnIndex="1"/>
+    <Label fx:id="notGoodHandLabel" text="99" GridPane.rowIndex="10" GridPane.columnIndex="2"/>
+    <Button fx:id="notGoodHandBtn" onAction="#addPerk" text="+" GridPane.rowIndex="10" GridPane.columnIndex="3"/>
+
+    <Label text="%restHand" GridPane.rowIndex="11"/>
+    <ProgressBar fx:id="restBar" prefWidth="240.0"
+                 GridPane.rowIndex="11" GridPane.columnIndex="1"/>
+    <Label fx:id="restLabel" text="99" GridPane.rowIndex="11" GridPane.columnIndex="2"/>
+    <Button fx:id="restBtn" onAction="#addPerk" text="+" GridPane.rowIndex="11" GridPane.columnIndex="3"/>
 
 </fx:root>
