--- a/src/main/resources/trashsoftware/trashSnooker/fxml/careerView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/careerView.fxml
@@ -8,7 +8,7 @@
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
           fx:controller="trashsoftware.trashSnooker.fxml.CareerView"
-          prefHeight="640.0" prefWidth="1000.0" vgap="10.0" hgap="20.0">
+          prefHeight="720.0" prefWidth="1080.0" vgap="10.0" hgap="20.0">
 
     <padding>
         <Insets topRightBottomLeft="10.0"/>
@@ -36,10 +36,10 @@
         </HBox>
     </VBox>
 
-<!--    <VBox GridPane.rowIndex="2" spacing="10.0">-->
-<!--        &lt;!&ndash;        荣誉&ndash;&gt;-->
-<!--    </VBox>-->
-    
+    <!--    <VBox GridPane.rowIndex="2" spacing="10.0">-->
+    <!--        &lt;!&ndash;        荣誉&ndash;&gt;-->
+    <!--    </VBox>-->
+
     <Button text="%seeToursList" onAction="#seeToursListAction" GridPane.rowIndex="5"/>
 
     <LabelTable fx:id="allAwardsTable" GridPane.rowIndex="6"/>
@@ -93,9 +93,18 @@
     <LabelTable fx:id="selectedPlayerInfoTable" GridPane.rowIndex="1" GridPane.columnIndex="2"
                 visible="false" managed="false" prefWidth="360.0" prefHeight="360.0"/>
 
-    <Label fx:id="selectedPlayerAchievements"
-           alignment="TOP_LEFT"
-           visible="false" managed="false" GridPane.rowIndex="2" GridPane.columnIndex="2"
-           GridPane.rowSpan="5"/>
+    <VBox fx:id="selectedPlayerAchBox" GridPane.rowIndex="2" GridPane.columnIndex="2" GridPane.rowSpan="5"
+    visible="false" managed="false">
+        <Label text="%participateGames"/>
+        <Label fx:id="selectedPlayerGameTypesLabel"/>
+        <Separator>
+            <padding>
+                <Insets top="5.0" bottom="5.0"/>
+            </padding>
+        </Separator>
+        <Label fx:id="selectedPlayerAchievements"
+               alignment="TOP_LEFT"/>
+    </VBox>
+
 
 </GridPane>
