--- a/src/main/resources/trashsoftware/trashSnooker/fxml/replayView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/replayView.fxml
@@ -10,7 +10,7 @@
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="trashsoftware.trashSnooker.fxml.ReplayView"
-      prefHeight="600.0" prefWidth="900.0" spacing="10.0">
+      prefHeight="600.0" prefWidth="1080.0" spacing="10.0">
     
     <padding>
         <Insets topRightBottomLeft="5.0"/>
@@ -19,6 +19,7 @@
     <TreeTableView fx:id="replayTable" VBox.vgrow="ALWAYS">
         <columns>
             <TreeTableColumn fx:id="replayCol" text="回放" prefWidth="120.0"/>
+            <TreeTableColumn fx:id="eventCol" text="%gameEvent" prefWidth="180.0"/>
             <TreeTableColumn fx:id="typeCol" text="类型" prefWidth="90.0"/>
             <TreeTableColumn fx:id="p1Col" text="玩家1" prefWidth="120.0"/>
             <TreeTableColumn fx:id="p2Col" text="玩家2" prefWidth="120.0"/>
