--- a/src/main/resources/trashsoftware/trashSnooker/fxml/newCareerView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/newCareerView.fxml
@@ -1,69 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<GridPane xmlns="http://javafx.com/javafx"
-          xmlns:fx="http://javafx.com/fxml"
-          fx:controller="trashsoftware.trashSnooker.fxml.NewCareerView"
-          fx:id="basePane"
-          prefHeight="400.0" prefWidth="600.0" vgap="10.0" hgap="10.0" alignment="CENTER">
+<VBox xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="trashsoftware.trashSnooker.fxml.NewCareerView" spacing="5.0">
 
-    <columnConstraints>
-        <ColumnConstraints halignment="CENTER"/>
-        <ColumnConstraints halignment="LEFT"/>
-        <ColumnConstraints halignment="CENTER"/>
-        <ColumnConstraints halignment="CENTER"/>
-        <ColumnConstraints halignment="LEFT"/>
-    </columnConstraints>
-    
-    <Label text="%difficulty" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-    <ComboBox fx:id="playerGoodnessBox" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-    <Label text="%aiGoodness" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-    <ComboBox fx:id="aiGoodnessBox" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-    
-    <Separator GridPane.rowIndex="2" GridPane.columnSpan="5"/>
+    <padding>
+        <Insets topRightBottomLeft="10.0"/>
+    </padding>
 
-    <Label text="%createPlayerPerson" GridPane.rowIndex="3" GridPane.columnSpan="2"/>
+    <HBox>
+        <Button text="←" onAction="#backAction"/>
+    </HBox>
 
-    <Label text="%careerName" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-    <TextField fx:id="nameField" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
-    
-    <Label text="%sexWithHelp" GridPane.rowIndex="5">
-        <tooltip>
-            <Tooltip text="%sexTooltip"/>
-        </tooltip>
-    </Label>
-    
-    <ComboBox fx:id="sexBox" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
-    
-    <Label text="%heightWithHelp" GridPane.rowIndex="6">
-        <tooltip>
-            <Tooltip text="%heightTooltip"/>
-        </tooltip>
-    </Label>
+    <GridPane fx:id="basePane"
+              prefHeight="400.0" prefWidth="600.0" vgap="10.0" hgap="10.0" alignment="CENTER"
+              VBox.vgrow="ALWAYS">
 
-    <ComboBox fx:id="heightBox" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+        <columnConstraints>
+            <ColumnConstraints halignment="CENTER"/>
+            <ColumnConstraints halignment="LEFT"/>
+            <ColumnConstraints halignment="CENTER"/>
+            <ColumnConstraints halignment="CENTER"/>
+            <ColumnConstraints halignment="LEFT"/>
+        </columnConstraints>
 
-    <Label text="%primaryHand" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
-    <ComboBox fx:id="handBox" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+        <Label text="%difficulty" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+        <ComboBox fx:id="playerGoodnessBox" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+        <Label text="%aiGoodness" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+        <ComboBox fx:id="aiGoodnessBox" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
-    <Button text="%createPlayer" onAction="#createPlayer" GridPane.rowIndex="8" GridPane.columnSpan="2"/>
-    
-    <Separator orientation="VERTICAL" GridPane.rowIndex="3" GridPane.columnIndex="2" GridPane.rowSpan="4"/>
+        <Separator GridPane.rowIndex="2" GridPane.columnSpan="5"/>
 
-    <Label text="%existingPlayerPerson" GridPane.rowIndex="3" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
+        <Label text="%createPlayerPerson" GridPane.rowIndex="3" GridPane.columnSpan="2"/>
 
-    <Button text="(i)" fx:id="playerInfoBtn" onAction="#playerInfoAction" disable="true" 
-            GridPane.rowIndex="4" GridPane.columnIndex="3"/>
-    <ComboBox fx:id="existingPlayersBox" GridPane.rowIndex="4" GridPane.columnIndex="4"/>
-    
-    <Label text="%existingPlayerTooltip" 
-           GridPane.rowIndex="5" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
+        <Label text="%careerName" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+        <TextField fx:id="nameField" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
 
-    <Button text="%usePlayerPerson" fx:id="usePlayerButton" onAction="#usePlayerAction"
-            disable="true"
-            GridPane.rowIndex="6" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
-    
-    <Label fx:id="promptLabel" GridPane.rowIndex="9" GridPane.columnSpan="5"/>
+        <Label text="%sexWithHelp" GridPane.rowIndex="5">
+            <tooltip>
+                <Tooltip text="%sexTooltip"/>
+            </tooltip>
+        </Label>
 
-</GridPane>
+        <ComboBox fx:id="sexBox" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+
+        <Label text="%heightWithHelp" GridPane.rowIndex="6">
+            <tooltip>
+                <Tooltip text="%heightTooltip"/>
+            </tooltip>
+        </Label>
+
+        <ComboBox fx:id="heightBox" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+
+        <Label text="%primaryHand" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
+        <ComboBox fx:id="handBox" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+
+        <Button text="%createPlayer" onAction="#createPlayer" GridPane.rowIndex="8"
+                GridPane.columnSpan="2"/>
+
+        <Separator orientation="VERTICAL" GridPane.rowIndex="3" GridPane.columnIndex="2"
+                   GridPane.rowSpan="4"/>
+
+        <Label text="%existingPlayerPerson" GridPane.rowIndex="3" GridPane.columnIndex="3"
+               GridPane.columnSpan="2"/>
+
+        <Button text="(i)" fx:id="playerInfoBtn" onAction="#playerInfoAction" disable="true"
+                GridPane.rowIndex="4" GridPane.columnIndex="3"/>
+        <ComboBox fx:id="existingPlayersBox" GridPane.rowIndex="4" GridPane.columnIndex="4"/>
+
+        <Label text="%existingPlayerTooltip"
+               GridPane.rowIndex="5" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
+
+        <Button text="%usePlayerPerson" fx:id="usePlayerButton" onAction="#usePlayerAction"
+                disable="true"
+                GridPane.rowIndex="6" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
+
+        <Label fx:id="promptLabel" GridPane.rowIndex="9" GridPane.columnSpan="5"/>
+
+    </GridPane>
+</VBox>
