--- a/src/main/resources/trashsoftware/trashSnooker/fxml/statsView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/statsView.fxml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
-<HBox xmlns="http://javafx.com/javafx"
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.layout.*?>
+<VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="trashsoftware.trashSnooker.fxml.statsViews.StatsView"
-      prefHeight="720.0" prefWidth="960.0">
+      prefHeight="720.0" prefWidth="960.0" spacing="5.0">
 
-    <TreeView fx:id="treeView" prefWidth="400.0">
+    <padding>
+        <Insets topRightBottomLeft="10.0"/>
+    </padding>
 
-    </TreeView>
-    
-    <ScrollPane HBox.hgrow="ALWAYS">
-        <VBox fx:id="rightPane" alignment="TOP_CENTER">
-            <padding>
-                <Insets topRightBottomLeft="10.0"/>
-            </padding>
-        </VBox>
-    </ScrollPane>
+    <HBox>
+        <Button text="←" onAction="#backAction"/>
+    </HBox>
 
-</HBox>
+    <HBox VBox.vgrow="ALWAYS">
+        <TreeView fx:id="treeView" prefWidth="400.0">
+
+        </TreeView>
+
+        <ScrollPane HBox.hgrow="ALWAYS">
+            <VBox fx:id="rightPane" alignment="TOP_CENTER">
+                <padding>
+                    <Insets topRightBottomLeft="10.0"/>
+                </padding>
+            </VBox>
+        </ScrollPane>
+
+    </HBox>
+
+</VBox>
