--- a/src/main/resources/trashsoftware/trashSnooker/fxml/statsView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/statsView.fxml
@@ -15,7 +15,7 @@
     </padding>
 
     <HBox>
-        <Button text="←" onAction="#backAction"/>
+        <Button text="%backIcon" onAction="#backAction"/>
     </HBox>
 
     <HBox VBox.vgrow="ALWAYS">
