--- a/src/main/resources/trashsoftware/trashSnooker/fxml/fastGameView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/fastGameView.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="trashsoftware.trashSnooker.fxml.FastGameView"
@@ -16,6 +16,16 @@
         <Button text="%backIcon" onAction="#backAction"/>
     </HBox>
 
+    <HBox spacing="10.0" alignment="CENTER">
+        <fx:define>
+            <ToggleGroup fx:id="gameTrainToggleGroup"/>
+        </fx:define>
+        <RadioButton fx:id="gameRadioBtn" text="%fastGameGame" toggleGroup="$gameTrainToggleGroup"
+                     userData="GAME" selected="true"/>
+        <RadioButton fx:id="trainRadioBtn" text="%training" toggleGroup="$gameTrainToggleGroup"
+                     userData="TRAIN"/>
+    </HBox>
+
     <GridPane vgap="5.0" hgap="10.0" alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints halignment="CENTER"/>
@@ -26,14 +36,18 @@
         <ComboBox fx:id="player1Box" GridPane.columnIndex="1"/>
         <ComboBox fx:id="player1CueBox" GridPane.columnIndex="2"/>
         <ComboBox fx:id="player1Player" GridPane.columnIndex="3"/>
-        <Label text="VS" GridPane.rowIndex="1" GridPane.columnSpan="2"/>
+        <Label fx:id="vsText" text="VS" GridPane.rowIndex="1" GridPane.columnSpan="2"/>
         <Button fx:id="player2InfoButton" text="(i)" onAction="#playerInfoAction"
                 GridPane.rowIndex="2" disable="true"/>
         <ComboBox fx:id="player2Box" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
         <ComboBox fx:id="player2CueBox" GridPane.rowIndex="2" GridPane.columnIndex="2"/>
         <ComboBox fx:id="player2Player" GridPane.rowIndex="2" GridPane.columnIndex="3"/>
-        <!--        <Button text="添加球员" onAction="#addPlayerAction"-->
-        <!--                GridPane.rowIndex="3" GridPane.columnSpan="4"/>-->
+
+        <Label fx:id="trainingItemText" text="%trainingItem" GridPane.rowIndex="2" visible="false"/>
+        <ComboBox fx:id="trainingItemBox" GridPane.rowIndex="2" GridPane.columnIndex="1"
+                  visible="false"/>
+        <CheckBox text="%trainingChallenge" fx:id="trainChallengeBox" GridPane.rowIndex="2" GridPane.columnIndex="2"
+                  visible="false"/>
     </GridPane>
 
     <Separator/>
