--- a/src/main/resources/trashsoftware/trashSnooker/fxml/alert/alert.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/alert/alert.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
@@ -15,20 +13,20 @@
     <padding>
         <Insets topRightBottomLeft="10.0"/>
     </padding>
-    
+
     <Label fx:id="headerText" wrapText="true">
         <font>
             <Font size="18.0"/>
         </font>
     </Label>
     <Label fx:id="contentText" wrapText="true"/>
-    
+
     <VBox fx:id="additionalPane">
     </VBox>
-    
+
     <HBox spacing="10.0" alignment="BOTTOM_RIGHT" VBox.vgrow="ALWAYS">
         <Button fx:id="yesButton" text="%yes" minWidth="50.0"/>
         <Button fx:id="noButton" text="%no" minWidth="50.0"/>
     </HBox>
-    
+
 </VBox>
